feat: Usecase Outbox 통합 테스트 개선 - OutboxClaimResult 적용 - 코드 및 테스트 시나리오 개선